--- a/src/components/Main/styles.module.scss
+++ b/src/components/Main/styles.module.scss
@@ -1,7 +1,17 @@
 
 .mainContainer{
     display: flex;
+    flex-direction: column;
 
     width: 100%;
     max-width: 1200px;
+
+    .howToGetAPlantContainer{
+        display: flex;
+        justify-content: center;
+
+        width: 100%;
+
+        margin-top: 224px;
+    }
 }
