Pequenas melhorias e iniciando campo de ofertas

--- a/src/components/HowToGetAPlant/styles.module.scss
+++ b/src/components/HowToGetAPlant/styles.module.scss
@@ -1,28 +1,29 @@
 .howToGetContainer{
     display: flex;
     align-items: flex-start;
-
-    width: 85%;
+    justify-content: center;
 
     position: relative;
 
     .backgroundTree{
         position: absolute;
-        right: 0;
+        right: 6%;
         bottom: 85%;
-        width: 65%;
+        width: 55%;
     }
 
     .plantBackground{
 
         z-index: 2;
 
-        width: 60%;
+        width: 50%;
         height: 379px;
 
         display: flex;
 
         overflow: hidden;
+
+        box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
 
         img{
             width: 100%;
@@ -40,6 +41,8 @@
         background: white;
 
         z-index: 2;
+
+        box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
 
         p{
             font-size: 22;
@@ -75,6 +78,8 @@
                     opacity: .5;
 
                     margin-left: 1rem;
+
+                    margin-top: 0;
                 }
 
                 &::before{
