--- a/src/components/Main/styles.module.scss
+++ b/src/components/Main/styles.module.scss
@@ -9,6 +9,7 @@
     .howToGetAPlantContainer{
         display: flex;
         justify-content: center;
+        flex-direction: column;
 
         width: 100%;
 
